Now you can add comment to the file and IConfiguration interface modified. Spaces are not allow between property name and value

--- a/MyConfig/MyConfig.csproj
+++ b/MyConfig/MyConfig.csproj
@@ -44,9 +44,8 @@
     <Compile Include="Internals\InternalConfiguration.cs" />
     <Compile Include="MyConfigurationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Standars\CategoryStandars.cs" />
-    <Compile Include="ConfigurationCommandParser.cs" />
-    <Compile Include="Standars\Parser.cs" />
+    <Compile Include="Standars\FormatsStandars.cs" />
+    <Compile Include="Standars\MyConfigParser.cs" />
     <Compile Include="Standars\PropertyStandars.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
